@@ -133,6 +133,7 @@ since 1999.  If I missed your name, let me know.
 * Andrew Kaplan
 * Lars Kellogg-Stedman
 * Paul Kent
+* Matthieu Kermagoret
 * Matthias Kerk
 * Bo Kersey
 * Andreas Kirchwitz
