@@ -7,6 +7,7 @@ Nagios 3.x Change Log
 ------------------
 ENHANCEMENTS
 * Patch to mini_epn to allow any command line length without breaking on extra trailing or leading whitespace (Ray Bengen)
+* Patch to speed up loading of state retention data (Matthieu Kermagoret)
 FIXES
 * Fix for choosing next valid time on day of DST change when clocks go one hour backwards
 * Fix for nagios now erroring when "Error: Could not find any contactgroup matching..." displayed
